Fix sidebar spacing on desktop

--- a/less/app.less
+++ b/less/app.less
@@ -422,6 +422,9 @@ footer.jumbotron {
 
     .messages-listing {
         height: 500px;
+        @media (min-width: @screen-sm-min) {
+            height: 600px;
+        }
         background: red;
     }
 }
